Specify 'Debug' build configuration for development scheme.

--- a/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Development.xcscheme
+++ b/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Development.xcscheme
@@ -111,7 +111,7 @@
       buildConfiguration = "Debug-BT">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release-BT"
+      buildConfiguration = "Debug-BT"
       customArchiveName = "BT"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
