--- a/ios/BT/Config/Release.xcconfig
+++ b/ios/BT/Config/Release.xcconfig
@@ -1,5 +1,5 @@
 //
-//  Debug-BT.xcconfig
+//  Release.xcconfig
 //  COVIDSafePaths
 //
 //  Created by Rob Visentin on 6/26/20.
@@ -11,7 +11,7 @@
 
 #include "Version.xcconfig"
 
-ASSETCATALOG_COMPILER_APPICON_NAME = AppIconDev
-PRODUCT_BUNDLE_IDENTIFIER = org.pathcheck.bt.dev
+ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
+PRODUCT_BUNDLE_IDENTIFIER = org.pathcheck.bt
 
-ALLOW_INSECURE_HTTP = YES
+ALLOW_INSECURE_HTTP = NO
