--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,11 +1,6 @@
 require_relative "../node_modules/react-native/scripts/react_native_pods"
 require_relative "../node_modules/@react-native-community/cli-platform-ios/native_modules"
-platform :ios, "10.0"
-
-project "COVIDSafePaths.xcodeproj",
-  "Debug-BT" => :debug,
-  "Release-BT" => :release,
-  "Staging-BT" => :release
+platform :ios, "13.5"
 
 def shared_pods
   config = use_native_modules!
@@ -21,6 +16,11 @@ def shared_pods
   pod "ZIPFoundation", "~> 0.9.11"
   pod "PromisesSwift", modular_headers: true
   pod "PromisesObjC", modular_headers: true
+
+  use_flipper!('Flipper' => '0.62.0') # should match the version of your Flipper client app
+  post_install do |installer|
+    flipper_post_install(installer)
+  end
 end
 
 target "BT" do
