get applicationId from .env.bt files, since it's already filled

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,7 +148,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "org.pathcheck.covidsafepaths.bt"
+        applicationId project.env.get("ANDROID_APPLICATION_ID")
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         multiDexEnabled true
