--- a/ios/BT/BT-Development.entitlements
+++ b/ios/BT/BT-Development.entitlements
@@ -4,6 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>Development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:app.associateddomain.org</string>
+	</array>
 	<key>com.apple.developer.exposure-notification</key>
 	<true/>
 </dict>
