--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.0.1")
+        classpath('com.android.tools.build:gradle:4.1.1')
 
         classpath "io.realm:realm-gradle-plugin:7.0.5"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
