--- a/ios/BT/BT-Development.entitlements
+++ b/ios/BT/BT-Development.entitlements
@@ -7,6 +7,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:*.en.express</string>
+		<string>applinks:$(ENX_APPLINKS_DOMAIN)</string>
 	</array>
 	<key>com.apple.developer.exposure-notification</key>
 	<true/>
