Store crash reporting API key in private repository (#861)
### This Commit:
This commit removes the hardcoded api key and instead pulls it in from a private repository.

--- a/ios/BT/Info.plist
+++ b/ios/BT/Info.plist
@@ -5,7 +5,7 @@
 	<key>bugsnag</key>
 	<dict>
 		<key>apiKey</key>
-		<string>3950fbb2e58f6b77c75ac53b8559aad8</string>
+		<string></string>
 	</dict>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
