Work in progress.

--- a/ios/BT/Info.plist
+++ b/ios/BT/Info.plist
@@ -59,6 +59,8 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSExceptionDomains</key>
