--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,5 +81,5 @@ jobs:
       - run: |
           xcodebuild test -workspace COVIDSafePaths.xcworkspace \
             -scheme BT_Development \
-            -destination 'platform=iOS Simulator,name=iPhone 11,OS=14.4' \
+            -destination 'platform=iOS Simulator,name=iPhone 8' \
         working-directory: ./ios
