--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,15 +9,15 @@ def shared_pods
   permissions_path = "../node_modules/react-native-permissions/ios"
   pod "Permission-Notifications", path: "#{permissions_path}/Notifications.podspec"
 
-  pod "Realm", "~> 10.1.1", modular_headers: true
-  pod "RealmSwift","~> 10.1.1", modular_headers: true
+  pod "Realm", "~> 10.5.2", modular_headers: true
+  pod "RealmSwift","~> 10.5.2", modular_headers: true
   pod "Alamofire", "~> 4.9.1"
   pod "KeychainAccess", "~> 4.2.0"
   pod "ZIPFoundation", "~> 0.9.11"
   pod "PromisesSwift", modular_headers: true
   pod "PromisesObjC", modular_headers: true
 
-  use_flipper!('Flipper' => '0.62.0') # should match the version of your Flipper client app
+  use_flipper!('Flipper' => '0.86.0', 'Flipper-Folly' => '2.5.3')
   post_install do |installer|
     flipper_post_install(installer)
   end
