Work/gaen 790 chaff requests (#918)
* GAEN-790 Chaff Requests

Schedule the work on Application launch
Add the correct EventSender function to trigger the ts code
Remove reusable code for encoding to a separate object file
Add the new worker that schedules the periodic work

* GAEN-790 Chaff Requests

Add a ChaffManager class to handle specific timing for firing requests.

* GAEN-790 Chaff

Remove the random z variable

* GAEN-790 Chaff Requests

Attach a react context initializer to trigger Chaff
Add a Config class for the ChaffManager to handle some QA needs

* Added react debug menu for Android only chaff fast request call.

* Added Android check to debug menu.

Co-authored-by: lundjrl <jrlbidamin@gmail.com>

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     defaultConfig {
         applicationId project.env.get("ANDROID_APPLICATION_ID")
         minSdkVersion rootProject.ext.minSdkVersion
@@ -297,6 +301,11 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
     }
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.1"
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    testImplementation 'org.amshove.kluent:kluent-android:1.61'
 }
 
 // Run this once to be able to run the application with BUCK
