--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        maven { url "https://repo.maven.apache.org/maven2" }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
