--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,7 +140,7 @@ def enableHermes = project.ext.react.get("enableHermes", false)
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    ndkVersion "21.0.6113669"
+    ndkVersion '21.4.7075529'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
