--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -258,7 +258,8 @@ dependencies {
     // Annotation processing
     kapt 'com.google.auto.value:auto-value:1.7.3'
     // Libraries
-    implementation 'androidx.work:work-runtime:2.5.0-beta02'
+    implementation 'androidx.work:work-runtime:2.5.0'
+    implementation "androidx.work:work-runtime-ktx:2.5.0"
     implementation 'androidx.concurrent:concurrent-futures:1.1.0'
     implementation 'com.google.android.gms:play-services-base:17.4.0'
     implementation 'com.google.android.gms:play-services-basement:17.4.0'
@@ -273,6 +274,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:logging-interceptor:3.14.9"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     implementation "com.google.android.gms:play-services-safetynet:17.0.0"
 
