--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,20 +4,20 @@ buildscript {
     ext.kotlin_version = '1.4.0'
     ext {
         compileSdkVersion = 30
-        buildToolsVersion = "30.0.0"
+        buildToolsVersion = "30.0.2"
         targetSdkVersion = 30
         minSdkVersion = 23
-
+        ndkVersion = "21.4.7075529"
         // for detox e2e testing
         kotlinVersion = '1.4.0'
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.0.1")
+        classpath("com.android.tools.build:gradle:4.2.2")
 
         classpath "io.realm:realm-gradle-plugin:7.0.5"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -42,7 +42,7 @@ allprojects {
         }
 
         google()
-        jcenter()
+        
         maven { url 'https://jitpack.io' }
     }
 }
