--- a/package.json
+++ b/package.json
@@ -109,5 +109,8 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "^16.13.1",
     "typescript": "^4.0.3"
+  },
+  "resolutions": {
+    "@jest/create-cache-key-function": "^27.0.1"
   }
 }
