--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,9 +19,10 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
-android.jetifier.blacklist = .*bcprov-jdk15on.*
+android.jetifier.ignorelist = .*bcprov-jdk15on.*
 
 org.gradle.jvmargs=-Xmx2048m
+org.gradle.warning.mode=all
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
