update to react-native 0.67.4

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.4.0'
     ext {
         compileSdkVersion = 30
-        buildToolsVersion = "30.0.0"
+        buildToolsVersion = "30.0.2"
         targetSdkVersion = 30
         minSdkVersion = 23
 
@@ -13,11 +13,11 @@ buildscript {
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.0.1")
+        classpath("com.android.tools.build:gradle:4.2.2")
 
         classpath "io.realm:realm-gradle-plugin:7.0.5"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -30,7 +30,6 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
         maven { url "https://repo.maven.apache.org/maven2" }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -40,9 +39,14 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
+        mavenCentral {
+            // We don't want to fetch react-native from Maven Central as there are
+            // older versions over there.
+            content {
+                excludeGroup "com.facebook.react"
+            }
+        }
         google()
-        jcenter()
         maven { url 'https://jitpack.io' }
     }
 }
