--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.4.0'
     ext {
         compileSdkVersion = 30
-        buildToolsVersion = "30.0.0"
+        buildToolsVersion = "30.0.2"
         targetSdkVersion = 30
         minSdkVersion = 23
 
@@ -13,11 +13,11 @@ buildscript {
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.0.1")
+        classpath("com.android.tools.build:gradle:4.2.1")
 
         classpath "io.realm:realm-gradle-plugin:7.0.5"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -30,6 +30,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         mavenLocal()
         maven { url "https://repo.maven.apache.org/maven2" }
         maven {
@@ -42,7 +43,6 @@ allprojects {
         }
 
         google()
-        jcenter()
         maven { url 'https://jitpack.io' }
     }
 }
