--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "dayjs": "^1.8.24",
     "i18next": "^19.3.3",
     "prop-types": "^15.7.2",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-i18next": "^11.4.0",
-    "react-native": "0.64.2",
+    "react-native": "0.65.0",
     "react-native-config": "^1.2.1",
     "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "^1.9.0",
@@ -105,7 +105,8 @@
     "lint-diff": "^1.2.1",
     "lint-staged": "^10.0.9",
     "logkitty": "^0.7.1",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "metro-react-native-babel-preset": "^0.66.0",
+    "react-native-codegen": "^0.0.7",
     "prettier": "^2.2.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "^16.13.1",
