--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,7 +22,7 @@ def shared_pods
     flipper_post_install(installer)
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-        if Gem::Version.new('8.0') > Gem::Version.new(config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'])
+        if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 9.0
           config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
         end
       end
