--- a/package.json
+++ b/package.json
@@ -122,6 +122,10 @@
     "react-native/shelljs": "0.8.5",
     "react-native/cli/strip-ansi/ansi-regex": "4.1.1",
     "react-native/pretty-format/ansi-regex": "5.0.1",
-    "react-native-svg/css-select/nth-check": "2.0.1"
+    "react-native-svg/css-select/nth-check": "2.0.1",
+    "react-native-svg/css-select/css-what": "5.0.1",
+    "stack/color/color-string": "1.5.5",
+    "react-native/metro-react-native-babel-transformer/core/resolve/path-parse": "1.0.7",
+    "eact-native-gesture-handler/fbjs/ua-parser-js": "0.7.24"
   }
 }
