--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "react-native/cli-platform-ios/plist": "3.0.4",
     "react-native/shelljs": "0.8.5",
     "react-native/cli/strip-ansi/ansi-regex": "4.1.1",
+    "**/minimist": "1.2.6",
     "react-native/pretty-format/ansi-regex": "5.0.1",
     "react-native-svg/css-select/nth-check": "2.0.1",
     "react-native-svg/css-select/css-what": "5.0.1",
